COMPILERS_LABORATORY/A5/ass5_21CS10016_21CS30050/ass5_21CS10016_21CS30050.output
Terminals unused in grammar

    TYPEDEF
    HASH
    ENUMERATION_CONST
    STRING_LITERAL


Grammar

    0 $accept: translation_unit $end

    1 constant: INTEGER_CONSTANT
    2         | FLOATING_CONSTANT
    3         | CHARACTER_CONSTANT

    4 primary_expression: IDENTIFIER
    5                   | constant
    6                   | PARENTHESIS_OPEN expression PARENTHESIS_CLOSE

    7 postfix_expression: primary_expression
    8                   | postfix_expression SQR_BRACE_OPEN expression SQR_BRACE_CLOSE
    9                   | postfix_expression PARENTHESIS_OPEN argument_expression_list_opt PARENTHESIS_CLOSE
   10                   | postfix_expression DOT IDENTIFIER
   11                   | postfix_expression PTR_OP IDENTIFIER
   12                   | postfix_expression INC_OP
   13                   | postfix_expression DEC_OP
   14                   | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE CURLY_BRACE_OPEN initializer_list CURLY_BRACE_CLOSE
   15                   | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE CURLY_BRACE_OPEN initializer_list COMMA CURLY_BRACE_CLOSE

   16 argument_expression_list: assignment_expression
   17                         | argument_expression_list COMMA assignment_expression

   18 argument_expression_list_opt: argument_expression_list
   19                             | %empty

   20 unary_expression: postfix_expression
   21                 | INC_OP unary_expression
   22                 | DEC_OP unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE

   26 unary_operator: BITWISEAND
   27               | STAR
   28               | PLUS
   29               | MINUS
   30               | NOT
   31               | EXCLAMATION

   32 cast_expression: unary_expression
   33                | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression STAR cast_expression
   36                          | multiplicative_expression DIVIDE cast_expression
   37                          | multiplicative_expression PERCENTAGE cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression PLUS multiplicative_expression
   40                    | additive_expression MINUS multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_OP additive_expression
   43                 | shift_expression RIGHT_OP additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LESS_THAN shift_expression
   46                      | relational_expression GREATER_THAN shift_expression
   47                      | relational_expression LTE_OP shift_expression
   48                      | relational_expression GTE_OP shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQ_OP relational_expression
   51                    | equality_expression NE_OP relational_expression

   52 and_expression: equality_expression
   53               | and_expression BITWISEAND equality_expression

   54 exclusive_or_expression: and_expression
   55                        | exclusive_or_expression BITWISEXOR and_expression

   56 inclusive_or_expression: exclusive_or_expression
   57                        | inclusive_or_expression BITWISEOR exclusive_or_expression

   58 logical_and_expression: inclusive_or_expression
   59                       | logical_and_expression AND_OP M inclusive_or_expression

   60 logical_or_expression: logical_and_expression
   61                      | logical_or_expression OR_OP M logical_and_expression

   62 conditional_expression: logical_or_expression
   63                       | logical_or_expression QUESTION_MARK expression COLON conditional_expression

   64 assignment_expression: conditional_expression
   65                      | unary_expression assignment_operator assignment_expression

   66 assignment_operator: EQ
   67                    | MUL_ASSIGN
   68                    | DIV_ASSIGN
   69                    | MOD_ASSIGN
   70                    | ADD_ASSIGN
   71                    | SUB_ASSIGN
   72                    | LEFT_ASSIGN
   73                    | RIGHT_ASSIGN
   74                    | AND_ASSIGN
   75                    | XOR_ASSIGN
   76                    | OR_ASSIGN

   77 expression: assignment_expression
   78           | expression COMMA assignment_expression

   79 constant_expression: conditional_expression

   80 declaration: declaration_specifiers init_declarator_list_opt SEMI_COLON

   81 init_declarator_list_opt: init_declarator_list
   82                         | %empty

   83 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   84                       | type_specifier declaration_specifiers_opt
   85                       | type_qualifier declaration_specifiers_opt
   86                       | function_specifier declaration_specifiers_opt

   87 declaration_specifiers_opt: declaration_specifiers
   88                           | %empty

   89 init_declarator_list: init_declarator
   90                     | init_declarator_list COMMA init_declarator

   91 init_declarator: declarator
   92                | declarator EQ initializer

   93 storage_class_specifier: EXTERN
   94                        | STATIC
   95                        | AUTO
   96                        | REGISTER

   97 type_specifier: VOID
   98               | CHAR
   99               | SHORT
  100               | INT
  101               | LONG
  102               | FLOAT
  103               | DOUBLE
  104               | SIGNED
  105               | UNSIGNED
  106               | BOOL
  107               | COMPLEX
  108               | IMAGINARY
  109               | enum_specifier
  110               | struct_or_union_specifier

  111 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  112                         | type_qualifier specifier_qualifier_list_opt

  113 specifier_qualifier_list_opt: specifier_qualifier_list
  114                             | %empty

  115 struct_or_union_specifier: struct_or_union CURLY_BRACE_OPEN struct_declaration_list CURLY_BRACE_CLOSE
  116                          | struct_or_union IDENTIFIER CURLY_BRACE_OPEN struct_declaration_list CURLY_BRACE_CLOSE
  117                          | struct_or_union IDENTIFIER

  118 struct_or_union: STRUCT
  119                | UNION

  120 struct_declaration_list: struct_declaration
  121                        | struct_declaration_list struct_declaration

  122 struct_declaration: specifier_qualifier_list SEMI_COLON
  123                   | specifier_qualifier_list struct_declarator_list SEMI_COLON

  124 struct_declarator_list: struct_declarator
  125                       | struct_declarator_list COMMA struct_declarator

  126 struct_declarator: COLON constant_expression
  127                  | declarator COLON constant_expression
  128                  | declarator

  129 enum_specifier: ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  130               | ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE
  131               | ENUM IDENTIFIER

  132 identifier_opt: IDENTIFIER
  133               | %empty

  134 enumerator_list: enumerator
  135                | enumerator_list COMMA enumerator

  136 enumerator: IDENTIFIER
  137           | IDENTIFIER EQ constant_expression

  138 type_qualifier: CONST
  139               | RESTRICT
  140               | VOLATILE

  141 function_specifier: INLINE

  142 declarator: pointer direct_declarator
  143           | direct_declarator

  144 direct_declarator: IDENTIFIER
  145                  | PARENTHESIS_OPEN declarator PARENTHESIS_CLOSE
  146                  | direct_declarator SQR_BRACE_OPEN type_qualifier_list assignment_expression SQR_BRACE_CLOSE
  147                  | direct_declarator SQR_BRACE_OPEN type_qualifier_list SQR_BRACE_CLOSE
  148                  | direct_declarator SQR_BRACE_OPEN assignment_expression SQR_BRACE_CLOSE
  149                  | direct_declarator SQR_BRACE_OPEN SQR_BRACE_CLOSE
  150                  | direct_declarator SQR_BRACE_OPEN STATIC type_qualifier_list assignment_expression SQR_BRACE_CLOSE
  151                  | direct_declarator SQR_BRACE_OPEN STATIC assignment_expression SQR_BRACE_CLOSE
  152                  | direct_declarator SQR_BRACE_OPEN type_qualifier_list STAR SQR_BRACE_CLOSE
  153                  | direct_declarator SQR_BRACE_OPEN STAR SQR_BRACE_CLOSE
  154                  | direct_declarator PARENTHESIS_OPEN changetable parameter_type_list PARENTHESIS_CLOSE
  155                  | direct_declarator PARENTHESIS_OPEN identifier_list PARENTHESIS_CLOSE
  156                  | direct_declarator PARENTHESIS_OPEN changetable PARENTHESIS_CLOSE

  157 type_qualifier_list_opt: type_qualifier_list
  158                        | %empty

  159 pointer: STAR type_qualifier_list_opt
  160        | STAR type_qualifier_list_opt pointer

  161 type_qualifier_list: type_qualifier
  162                    | type_qualifier_list type_qualifier

  163 parameter_type_list: parameter_list
  164                    | parameter_list COMMA ELLIPSIS

  165 parameter_list: parameter_declaration
  166               | parameter_list COMMA parameter_declaration

  167 parameter_declaration: declaration_specifiers declarator
  168                      | declaration_specifiers

  169 identifier_list: IDENTIFIER
  170                | identifier_list COMMA IDENTIFIER

  171 type_name: specifier_qualifier_list

  172 initializer: assignment_expression
  173            | CURLY_BRACE_OPEN initializer_list CURLY_BRACE_CLOSE
  174            | CURLY_BRACE_OPEN initializer_list COMMA CURLY_BRACE_CLOSE

  175 initializer_list: designation_opt initializer
  176                 | initializer_list COMMA designation_opt initializer

  177 designation_opt: designation
  178                | %empty

  179 designation: designator_list EQ

  180 designator_list: designator
  181                | designator_list designator

  182 designator: SQR_BRACE_OPEN constant_expression SQR_BRACE_CLOSE
  183           | DOT IDENTIFIER

  184 statement: labeled_statement
  185          | compound_statement
  186          | expression_statement
  187          | selection_statement
  188          | iteration_statement
  189          | jump_statement

  190 loop_statement: labeled_statement
  191               | expression_statement
  192               | selection_statement
  193               | iteration_statement
  194               | jump_statement

  195 labeled_statement: IDENTIFIER COLON M statement
  196                  | CASE constant_expression COLON statement
  197                  | DEFAULT COLON statement

  198 compound_statement: CURLY_BRACE_OPEN X changetable block_item_list_opt CURLY_BRACE_CLOSE

  199 block_item_list: block_item
  200                | block_item_list M block_item

  201 block_item_list_opt: block_item_list
  202                    | %empty

  203 block_item: declaration
  204           | statement

  205 expression_statement: SEMI_COLON
  206                     | expression SEMI_COLON

  207 selection_statement: IF PARENTHESIS_OPEN expression N PARENTHESIS_CLOSE M statement N
  208                    | IF PARENTHESIS_OPEN expression N PARENTHESIS_CLOSE M statement N ELSE M statement
  209                    | SWITCH PARENTHESIS_OPEN expression PARENTHESIS_CLOSE statement

  210 iteration_statement: WHILE W PARENTHESIS_OPEN X changetable M expression PARENTHESIS_CLOSE M loop_statement
  211                    | WHILE W PARENTHESIS_OPEN X changetable M expression PARENTHESIS_CLOSE CURLY_BRACE_OPEN M block_item_list_opt CURLY_BRACE_CLOSE
  212                    | DO D M loop_statement M WHILE PARENTHESIS_OPEN expression PARENTHESIS_CLOSE SEMI_COLON
  213                    | DO D CURLY_BRACE_OPEN M block_item_list_opt CURLY_BRACE_CLOSE M WHILE PARENTHESIS_OPEN expression PARENTHESIS_CLOSE SEMI_COLON
  214                    | FOR F PARENTHESIS_OPEN X changetable declaration M expression_statement M expression N PARENTHESIS_CLOSE M loop_statement
  215                    | FOR F PARENTHESIS_OPEN X changetable expression_statement M expression_statement M expression N PARENTHESIS_CLOSE M loop_statement
  216                    | FOR F PARENTHESIS_OPEN X changetable declaration M expression_statement M expression N PARENTHESIS_CLOSE M CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE
  217                    | FOR F PARENTHESIS_OPEN X changetable expression_statement M expression_statement M expression N PARENTHESIS_CLOSE M CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

  218 jump_statement: GOTO IDENTIFIER SEMI_COLON
  219               | CONTINUE SEMI_COLON
  220               | BREAK SEMI_COLON
  221               | RETURN expression SEMI_COLON
  222               | RETURN SEMI_COLON

  223 translation_unit: external_declaration
  224                 | translation_unit external_declaration

  225 external_declaration: function_definition
  226                     | declaration

  227 function_definition: declaration_specifiers declarator declaration_list_opt changetable CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

  228 declaration_list_opt: declaration_list
  229                     | %empty

  230 declaration_list: declaration
  231                 | declaration_list declaration

  232 changetable: %empty

  233 M: %empty

  234 F: %empty

  235 W: %empty

  236 D: %empty

  237 X: %empty

  238 N: %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BREAK (258) 220
    RETURN (259) 221 222
    CASE (260) 196
    FOR (261) 214 215 216 217
    WHILE (262) 210 211 212 213
    GOTO (263) 218
    SIZEOF (264) 24 25
    CONTINUE (265) 219
    IF (266) 207 208
    DO (267) 212 213
    SWITCH (268) 209
    ELSE (269) 208
    FLOAT (270) 102
    SHORT (271) 99
    CHAR (272) 98
    BOOL (273) 106
    IMAGINARY (274) 108
    COMPLEX (275) 107
    INT (276) 100
    DOUBLE (277) 103
    LONG (278) 101
    VOID (279) 97
    SIGNED (280) 104
    AUTO (281) 95
    UNSIGNED (282) 105
    ENUM (283) 129 130 131
    UNION (284) 119
    STRUCT (285) 118
    TYPEDEF (286)
    CONST (287) 138
    DEFAULT (288) 197
    STATIC (289) 94 150 151
    REGISTER (290) 96
    RESTRICT (291) 139
    VOLATILE (292) 140
    EXTERN (293) 93
    INLINE (294) 141
    SQR_BRACE_OPEN (295) 8 146 147 148 149 150 151 152 153 182
    SQR_BRACE_CLOSE (296) 8 146 147 148 149 150 151 152 153 182
    PARENTHESIS_OPEN (297) 6 9 14 15 25 33 145 154 155 156 207 208 209 210 211 212 213 214 215 216 217
    PARENTHESIS_CLOSE (298) 6 9 14 15 25 33 145 154 155 156 207 208 209 210 211 212 213 214 215 216 217
    CURLY_BRACE_OPEN (299) 14 15 115 116 129 130 173 174 198 211 213 216 217 227
    CURLY_BRACE_CLOSE (300) 14 15 115 116 129 130 173 174 198 211 213 216 217 227
    DOT (301) 10 183
    QUESTION_MARK (302) 63
    COLON (303) 63 126 127 195 196 197
    SEMI_COLON (304) 80 122 123 205 206 212 213 218 219 220 221 222
    COMMA (305) 15 17 78 90 125 130 135 164 166 170 174 176
    HASH (306)
    PLUS (307) 28 39
    MINUS (308) 29 40
    STAR (309) 27 35 152 153 159 160
    DIVIDE (310) 36
    PTR_OP (311) 11
    INC_OP (312) 12 21
    DEC_OP (313) 13 22
    RIGHT_OP (314) 43
    LEFT_OP (315) 42
    LESS_THAN (316) 45
    GREATER_THAN (317) 46
    LTE_OP (318) 47
    GTE_OP (319) 48
    EQ_OP (320) 50
    NE_OP (321) 51
    BITWISEOR (322) 57
    OR_OP (323) 61
    BITWISEAND (324) 26 53
    AND_OP (325) 59
    BITWISEXOR (326) 55
    NOT (327) 30
    EXCLAMATION (328) 31
    ELLIPSIS (329) 164
    PERCENTAGE (330) 37
    EQ (331) 66 92 137 179
    ENUMERATION_CONST (332)
    ADD_ASSIGN (333) 70
    SUB_ASSIGN (334) 71
    MUL_ASSIGN (335) 67
    DIV_ASSIGN (336) 68
    MOD_ASSIGN (337) 69
    LEFT_ASSIGN (338) 72
    RIGHT_ASSIGN (339) 73
    AND_ASSIGN (340) 74
    OR_ASSIGN (341) 76
    XOR_ASSIGN (342) 75
    IDENTIFIER <sym_ptr> (343) 4 10 11 116 117 131 132 136 137 144 169 170 183 195 218
    INTEGER_CONSTANT <iVal> (344) 1
    CHARACTER_CONSTANT <cVal> (345) 3
    FLOATING_CONSTANT <fVal> (346) 2
    STRING_LITERAL <cVal> (347)
    "then" (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    constant <expr> (95)
        on left: 1 2 3
        on right: 5
    primary_expression <expr> (96)
        on left: 4 5 6
        on right: 7
    postfix_expression <A> (97)
        on left: 7 8 9 10 11 12 13 14 15
        on right: 8 9 10 11 12 13 20
    argument_expression_list <param_no> (98)
        on left: 16 17
        on right: 17 18
    argument_expression_list_opt <param_no> (99)
        on left: 18 19
        on right: 9
    unary_expression <A> (100)
        on left: 20 21 22 23 24 25
        on right: 21 22 24 32 65
    unary_operator <unaryOp> (101)
        on left: 26 27 28 29 30 31
        on right: 23
    cast_expression <A> (102)
        on left: 32 33
        on right: 23 33 34 35 36 37
    multiplicative_expression <expr> (103)
        on left: 34 35 36 37
        on right: 35 36 37 38 39 40
    additive_expression <expr> (104)
        on left: 38 39 40
        on right: 39 40 41 42 43
    shift_expression <expr> (105)
        on left: 41 42 43
        on right: 42 43 44 45 46 47 48
    relational_expression <expr> (106)
        on left: 44 45 46 47 48
        on right: 45 46 47 48 49 50 51
    equality_expression <expr> (107)
        on left: 49 50 51
        on right: 50 51 52 53
    and_expression <expr> (108)
        on left: 52 53
        on right: 53 54 55
    exclusive_or_expression <expr> (109)
        on left: 54 55
        on right: 55 56 57
    inclusive_or_expression <expr> (110)
        on left: 56 57
        on right: 57 58 59
    logical_and_expression <expr> (111)
        on left: 58 59
        on right: 59 60 61
    logical_or_expression <expr> (112)
        on left: 60 61
        on right: 61 62 63
    conditional_expression <expr> (113)
        on left: 62 63
        on right: 63 64 79
    assignment_expression <expr> (114)
        on left: 64 65
        on right: 16 17 65 77 78 146 148 150 151 172
    assignment_operator (115)
        on left: 66 67 68 69 70 71 72 73 74 75 76
        on right: 65
    expression <expr> (116)
        on left: 77 78
        on right: 6 8 63 78 206 207 208 209 210 211 212 213 214 215 216 217 221
    constant_expression (117)
        on left: 79
        on right: 126 127 137 182 196
    declaration (118)
        on left: 80
        on right: 203 214 216 226 230 231
    init_declarator_list_opt (119)
        on left: 81 82
        on right: 80
    declaration_specifiers (120)
        on left: 83 84 85 86
        on right: 80 87 167 168 227
    declaration_specifiers_opt (121)
        on left: 87 88
        on right: 83 84 85 86
    init_declarator_list (122)
        on left: 89 90
        on right: 81 90
    init_declarator <sym_ptr> (123)
        on left: 91 92
        on right: 89 90
    storage_class_specifier (124)
        on left: 93 94 95 96
        on right: 83
    type_specifier (125)
        on left: 97 98 99 100 101 102 103 104 105 106 107 108 109 110
        on right: 84 111
    specifier_qualifier_list (126)
        on left: 111 112
        on right: 113 122 123 171
    specifier_qualifier_list_opt (127)
        on left: 113 114
        on right: 111 112
    struct_or_union_specifier (128)
        on left: 115 116 117
        on right: 110
    struct_or_union (129)
        on left: 118 119
        on right: 115 116 117
    struct_declaration_list (130)
        on left: 120 121
        on right: 115 116 121
    struct_declaration (131)
        on left: 122 123
        on right: 120 121
    struct_declarator_list (132)
        on left: 124 125
        on right: 123 125
    struct_declarator (133)
        on left: 126 127 128
        on right: 124 125
    enum_specifier (134)
        on left: 129 130 131
        on right: 109
    identifier_opt (135)
        on left: 132 133
        on right: 129 130
    enumerator_list (136)
        on left: 134 135
        on right: 129 130 135
    enumerator (137)
        on left: 136 137
        on right: 134 135
    type_qualifier (138)
        on left: 138 139 140
        on right: 85 112 161 162
    function_specifier (139)
        on left: 141
        on right: 86
    declarator <sym_ptr> (140)
        on left: 142 143
        on right: 91 92 127 128 145 167 227
    direct_declarator <sym_ptr> (141)
        on left: 144 145 146 147 148 149 150 151 152 153 154 155 156
        on right: 142 143 146 147 148 149 150 151 152 153 154 155 156
    type_qualifier_list_opt (142)
        on left: 157 158
        on right: 159 160
    pointer <symbol_type> (143)
        on left: 159 160
        on right: 142 160
    type_qualifier_list (144)
        on left: 161 162
        on right: 146 147 150 152 157 162
    parameter_type_list (145)
        on left: 163 164
        on right: 154
    parameter_list (146)
        on left: 165 166
        on right: 163 164 166
    parameter_declaration (147)
        on left: 167 168
        on right: 165 166
    identifier_list (148)
        on left: 169 170
        on right: 155 170
    type_name (149)
        on left: 171
        on right: 14 15 25 33
    initializer <sym_ptr> (150)
        on left: 172 173 174
        on right: 92 175 176
    initializer_list (151)
        on left: 175 176
        on right: 14 15 173 174 176
    designation_opt (152)
        on left: 177 178
        on right: 175 176
    designation (153)
        on left: 179
        on right: 177
    designator_list (154)
        on left: 180 181
        on right: 179 181
    designator (155)
        on left: 182 183
        on right: 180 181
    statement <stat> (156)
        on left: 184 185 186 187 188 189
        on right: 195 196 197 204 207 208 209
    loop_statement <stat> (157)
        on left: 190 191 192 193 194
        on right: 210 212 214 215
    labeled_statement <stat> (158)
        on left: 195 196 197
        on right: 184 190
    compound_statement <stat> (159)
        on left: 198
        on right: 185
    block_item_list <stat> (160)
        on left: 199 200
        on right: 200 201
    block_item_list_opt <stat> (161)
        on left: 201 202
        on right: 198 211 213 216 217 227
    block_item <stat> (162)
        on left: 203 204
        on right: 199 200
    expression_statement <expr> (163)
        on left: 205 206
        on right: 186 191 214 215 216 217
    selection_statement <stat> (164)
        on left: 207 208 209
        on right: 187 192
    iteration_statement <stat> (165)
        on left: 210 211 212 213 214 215 216 217
        on right: 188 193
    jump_statement <stat> (166)
        on left: 218 219 220 221 222
        on right: 189 194
    translation_unit (167)
        on left: 223 224
        on right: 0 224
    external_declaration (168)
        on left: 225 226
        on right: 223 224
    function_definition (169)
        on left: 227
        on right: 225
    declaration_list_opt (170)
        on left: 228 229
        on right: 227
    declaration_list (171)
        on left: 230 231
        on right: 228 231
    changetable (172)
        on left: 232
        on right: 154 156 198 210 211 214 215 216 217 227
    M <instruction_no> (173)
        on left: 233
        on right: 59 61 195 200 207 208 210 211 212 213 214 215 216 217
    F (174)
        on left: 234
        on right: 214 215 216 217
    W (175)
        on left: 235
        on right: 210 211
    D (176)
        on left: 236
        on right: 212 213
    X (177)
        on left: 237
        on right: 198 210 211 214 215 216 217
    N <stat> (178)
        on left: 238
        on right: 207 208 214 215 216 217


State 0

    0 $accept: . translation_unit $end

    FLOAT      shift, and go to state 1
    SHORT      shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    IMAGINARY  shift, and go to state 5
    COMPLEX    shift, and go to state 6
    INT        shift, and go to state 7
    DOUBLE     shift, and go to state 8
    LONG       shift, and go to state 9
    VOID       shift, and go to state 10
    SIGNED     shift, and go to state 11
    AUTO       shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    ENUM       shift, and go to state 14
    UNION      shift, and go to state 15
    STRUCT     shift, and go to state 16
    CONST      shift, and go to state 17
    STATIC     shift, and go to state 18
    REGISTER   shift, and go to state 19
    RESTRICT   shift, and go to state 20
    VOLATILE   shift, and go to state 21
    EXTERN     shift, and go to state 22
    INLINE     shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    translation_unit           go to state 33
    external_declaration       go to state 34
    function_definition        go to state 35


State 1

  102 type_specifier: FLOAT .

    $default  reduce using rule 102 (type_specifier)


State 2

   99 type_specifier: SHORT .

    $default  reduce using rule 99 (type_specifier)


State 3

   98 type_specifier: CHAR .

    $default  reduce using rule 98 (type_specifier)


State 4

  106 type_specifier: BOOL .

    $default  reduce using rule 106 (type_specifier)


State 5

  108 type_specifier: IMAGINARY .

    $default  reduce using rule 108 (type_specifier)


State 6

  107 type_specifier: COMPLEX .

    $default  reduce using rule 107 (type_specifier)


State 7

  100 type_specifier: INT .

    $default  reduce using rule 100 (type_specifier)


State 8

  103 type_specifier: DOUBLE .

    $default  reduce using rule 103 (type_specifier)


State 9

  101 type_specifier: LONG .

    $default  reduce using rule 101 (type_specifier)


State 10

   97 type_specifier: VOID .

    $default  reduce using rule 97 (type_specifier)


State 11

  104 type_specifier: SIGNED .

    $default  reduce using rule 104 (type_specifier)


State 12

   95 storage_class_specifier: AUTO .

    $default  reduce using rule 95 (storage_class_specifier)


State 13

  105 type_specifier: UNSIGNED .

    $default  reduce using rule 105 (type_specifier)


State 14

  129 enum_specifier: ENUM . identifier_opt CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  130               | ENUM . identifier_opt CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE
  131               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 36

    $default  reduce using rule 133 (identifier_opt)

    identifier_opt  go to state 37


State 15

  119 struct_or_union: UNION .

    $default  reduce using rule 119 (struct_or_union)


State 16

  118 struct_or_union: STRUCT .

    $default  reduce using rule 118 (struct_or_union)


State 17

  138 type_qualifier: CONST .

    $default  reduce using rule 138 (type_qualifier)


State 18

   94 storage_class_specifier: STATIC .

    $default  reduce using rule 94 (storage_class_specifier)


State 19

   96 storage_class_specifier: REGISTER .

    $default  reduce using rule 96 (storage_class_specifier)


State 20

  139 type_qualifier: RESTRICT .

    $default  reduce using rule 139 (type_qualifier)


State 21

  140 type_qualifier: VOLATILE .

    $default  reduce using rule 140 (type_qualifier)


State 22

   93 storage_class_specifier: EXTERN .

    $default  reduce using rule 93 (storage_class_specifier)


State 23

  141 function_specifier: INLINE .

    $default  reduce using rule 141 (function_specifier)


State 24

  226 external_declaration: declaration .

    $default  reduce using rule 226 (external_declaration)


State 25

   80 declaration: declaration_specifiers . init_declarator_list_opt SEMI_COLON
  227 function_definition: declaration_specifiers . declarator declaration_list_opt changetable CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

    PARENTHESIS_OPEN  shift, and go to state 38
    STAR              shift, and go to state 39
    IDENTIFIER        shift, and go to state 40

    $default  reduce using rule 82 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 41
    init_declarator_list      go to state 42
    init_declarator           go to state 43
    declarator                go to state 44
    direct_declarator         go to state 45
    pointer                   go to state 46


State 26

   83 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    FLOAT      shift, and go to state 1
    SHORT      shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    IMAGINARY  shift, and go to state 5
    COMPLEX    shift, and go to state 6
    INT        shift, and go to state 7
    DOUBLE     shift, and go to state 8
    LONG       shift, and go to state 9
    VOID       shift, and go to state 10
    SIGNED     shift, and go to state 11
    AUTO       shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    ENUM       shift, and go to state 14
    UNION      shift, and go to state 15
    STRUCT     shift, and go to state 16
    CONST      shift, and go to state 17
    STATIC     shift, and go to state 18
    REGISTER   shift, and go to state 19
    RESTRICT   shift, and go to state 20
    VOLATILE   shift, and go to state 21
    EXTERN     shift, and go to state 22
    INLINE     shift, and go to state 23

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 48
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 27

   84 declaration_specifiers: type_specifier . declaration_specifiers_opt

    FLOAT      shift, and go to state 1
    SHORT      shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    IMAGINARY  shift, and go to state 5
    COMPLEX    shift, and go to state 6
    INT        shift, and go to state 7
    DOUBLE     shift, and go to state 8
    LONG       shift, and go to state 9
    VOID       shift, and go to state 10
    SIGNED     shift, and go to state 11
    AUTO       shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    ENUM       shift, and go to state 14
    UNION      shift, and go to state 15
    STRUCT     shift, and go to state 16
    CONST      shift, and go to state 17
    STATIC     shift, and go to state 18
    REGISTER   shift, and go to state 19
    RESTRICT   shift, and go to state 20
    VOLATILE   shift, and go to state 21
    EXTERN     shift, and go to state 22
    INLINE     shift, and go to state 23

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 49
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 28

  110 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 110 (type_specifier)


State 29

  115 struct_or_union_specifier: struct_or_union . CURLY_BRACE_OPEN struct_declaration_list CURLY_BRACE_CLOSE
  116                          | struct_or_union . IDENTIFIER CURLY_BRACE_OPEN struct_declaration_list CURLY_BRACE_CLOSE
  117                          | struct_or_union . IDENTIFIER

    CURLY_BRACE_OPEN  shift, and go to state 50
    IDENTIFIER        shift, and go to state 51


State 30

  109 type_specifier: enum_specifier .

    $default  reduce using rule 109 (type_specifier)


State 31

   85 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    FLOAT      shift, and go to state 1
    SHORT      shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    IMAGINARY  shift, and go to state 5
    COMPLEX    shift, and go to state 6
    INT        shift, and go to state 7
    DOUBLE     shift, and go to state 8
    LONG       shift, and go to state 9
    VOID       shift, and go to state 10
    SIGNED     shift, and go to state 11
    AUTO       shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    ENUM       shift, and go to state 14
    UNION      shift, and go to state 15
    STRUCT     shift, and go to state 16
    CONST      shift, and go to state 17
    STATIC     shift, and go to state 18
    REGISTER   shift, and go to state 19
    RESTRICT   shift, and go to state 20
    VOLATILE   shift, and go to state 21
    EXTERN     shift, and go to state 22
    INLINE     shift, and go to state 23

    $default  reduce using rule 88 (declaration_specifiers_opt)

    declaration_specifiers      go to state 47
    declaration_specifiers_opt  go to state 52
    storage_class_specifier     go to state 26
    type_specifier              go to state 27
    struct_or_union_specifier   go to state 28
    struct_or_union             go to state 29
    enum_specifier              go to state 30
    type_qualifier              go to state 31
    function_specifier          go to state 32


State 32

   86 declaration_specifiers: function_specifier . declaration_specifiers_opt

    FLOAT      shift, and go to state 1
    SHORT      shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    IMAGINARY  shift, and go to state 5
    COMPLEX    shift, and go to state 6
    INT        shift, and go to state 7
    DOUBLE     shift, and go to state 8
    LONG       shift, and go to state 9
    VOID       shift, and go to state 10
    SIGNED     shift, and go to state 11
    AUTO       shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    ENUM       shift, and go to state 14
    UNION      shift, and go to state 15
    STRUCT     shift, and go to state 16
    CONST      shift, and go to state 17
    STATIC     shift, and go to state 18
    REGISTER   shift, and go to state 19
    RESTRICT   shift, and go to state 20
    VOLATILE   shift, and go to state 21
    EXTERN     shift, and go to state 22
    INLINE     shift, and go to state 23

    $default  reduce using rule 88 (declaration_specifiers_opt)
